--- a/src/components/DashBoard/NavBars/NavInfo/ClientSelector/index.scss
+++ b/src/components/DashBoard/NavBars/NavInfo/ClientSelector/index.scss
@@ -15,7 +15,7 @@ $border-color_1: transparent;
 .smaller-client-selector {
 	display: none;
 }
-@media (max-width: 300px) {
+@media (max-width: 376px) {
 	#dropdown-clients {
 		padding-left: 0 !important;
 		>* {
